example/errors/interpret/neg_repeat_count.box
set arr: [int] = [5; -3];
